Duplicate affected tests with `-XX:+VerifyIntrinsicChecks` variants